<?xml version="1.0"?>
<package format="3">
  <name>rplidar_2d</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble RPLidar 2D publisher using the Python rplidar library.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- External (non-ROS) dependency: rplidar (pip) -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
