<?xml version="1.0"?>
<package format="3">
  <name>sharewave_rover</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble driver for Sharewave rover over serial (ESP32 JSON protocol).</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- External (non-ROS) dependency: pyserial (install via apt/pip) -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
